// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<div>
  <Styled(ReactTable)
    className="-striped"
    columns={
      Array [
        Object {},
        Object {},
        Object {},
      ]
    }
    data={
      Array [
        Object {
          "_id": 1,
          "thread": Object {
            "threadId": 1,
            "userTitle": "Title 1",
          },
        },
        Object {
          "_id": 2,
          "thread": Object {
            "threadId": 2,
            "userTitle": "Title 2",
          },
        },
      ]
    }
    defaultPageSize={20}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "test-key",
        },
      ]
    }
    noDataText="No Threads Found"
    showPaginationTop={true}
  />
</div>
`;

exports[`rendering snapshots should render valid snapshot when loading 1`] = `
<div>
  <Styled(ReactTable)
    className="-striped"
    columns={
      Array [
        Object {},
        Object {},
        Object {},
      ]
    }
    data={
      Array [
        Object {
          "_id": 1,
          "thread": Object {
            "threadId": 1,
            "userTitle": "Title 1",
          },
        },
        Object {
          "_id": 2,
          "thread": Object {
            "threadId": 2,
            "userTitle": "Title 2",
          },
        },
      ]
    }
    defaultPageSize={20}
    defaultSorted={
      Array [
        Object {
          "desc": true,
          "id": "test-key",
        },
      ]
    }
    noDataText="Loading..."
    showPaginationTop={true}
  />
</div>
`;
